fix/nav flicker

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1017,9 +1017,6 @@ nav a:hover {
 .top-\[50\%\] {
   top: 50%;
 }
-.bottom-6 {
-  bottom: 1.5rem;
-}
 .order-1 {
   order: 1;
 }
@@ -1570,6 +1567,10 @@ nav a:hover {
     }
     }
 
+/* Apline Flicker Fix  */
+[x-cloak] {
+    display: none !important;
+}
 
 /* ----------- Default Styles --------- */
 
